# reachy2_emotions

./: .gitattributes  README.md  antennas.py  manette_ces.py  pyproject.toml  repo_structure.txt  setup.cfg
.github/workflows/: lint.yml
data/others/: affection1.json  attentive1.json  calming1.json  come1.json  curious1.json  dance3.json  disgusted1.json  fear1.json  helpful2.json  impatient1.json  inquiring1.json  laughing1.json  lost1.json  no_excited1.json  oops2.json  resigned1.json  sad1.json  sad2.json  welcoming2.json  yes_excited1.json
data/post_processed_recordings/: affection1_processed.json  amazed1_processed.json  anxiety1_processed.json  attentive1_processed.json  attentive2_processed.json  boredom1_processed.json  boredom2_processed.json  calming1_processed.json  cheerful1.json  come1.json  confused1_processed.json  contempt1_processed.json  curious1.json  dance1.json  dance2_processed.json  dance3_processed.json  disgusted1.json  displeased1_processed.json  displeased2.json  downcast1_processed.json  enthusiastic1.json  enthusiastic2.json  exhausted1_processed.json  fear1.json  frustrated1.json  furious1.json  go_away1.json  grateful1_processed.json  helpful1_processed.json  helpful2_processed.json  impatient1_processed.json  impatient2_processed.json  incomprehensible2.json  indifferent1.json  inquiring1_processed.json  inquiring2.json  inquiring3_processed.json  irritated1.json  irritated2_processed.json  laughing1.json  (+46 more)
reachy2_emotions/: antennas.py  record_move.py  replay_move.py  smart_interpol_test.py  utils.py
record/: interrupt_test.py  record_move.py  rename_emotion_files.py  replay_move.py
src/: record_move.py
tests/: interrupt_test.py
tools/: batch_gif_compression.sh  dynamic_interpolation_tests.py  emotions_map.csv  plot_recording.py  preprocess_recording.py  rank.bash  rank.py  rename_emotion_files.py  repo_structure.txt  trim_all.py  verif.py
(+213 files in other folders)
