[metadata]
name = reachy2_emotions
version = attr: reachy2_emotions.__version__
author = Pollen Robotics
author_email = contact@pollen-robotics.com
url = https://github.com/pollen-robotics/reachy2_emotions
description = Reachy 2 Emotions package
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
include_package_data = True
install_requires =
    numpy>=1.24.0,<=1.26.4
    sounddevice
    soundfile
    Flask>=2.0.0
    flask-cors
    reachy2-sdk>=1.0.0, <2.0.0

[options.packages.find]
where = .

[options.extras_require]
dev =
    black==23.12.1
    flake8==7.0.0
    pytest==7.4.3
    coverage==7.3.2
    isort==5.13.2
    pdoc>=14.0.0,<=14.4.0

[flake8]
exclude = *test*
max-line-length = 128
extend-ignore = E203
max-complexity = 10